avformat/utils: limit probe score in the id3 case only if there is a chance that data after the id3 tag will become available

Fixes ticket3327 (sample.mp3)

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>